--- a/Flutter_module/pubspec.yaml
+++ b/Flutter_module/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_boost: ^0.0.415 #闲鱼混合解决方案
 
 dev_dependencies:
   flutter_test:
